@startuml

title __EDIT's Class Diagram__\n

  namespace ru.omegapps.wisherapp {
    namespace fragments {
      namespace edit {
        class ru.omegapps.wisherapp.fragments.edit.CreateWishBlock {
            ~ mAuth : FirebaseAuth
            ~ okButton : Button
            ~ wishBlockRef : DatabaseReference
            ~ wishTextView : EditText
            {static} - BEGIN_STEP : String
            {static} - END_STEP : String
            {static} - ENTER_NAME_TAG : CharSequence
            {static} - MID_STEP : String
            {static} - WB_KEY : String
            - addNameTagButton : Button
            - beginCheck : CheckBox
            - endCheck : CheckBox
            - filters : ArrayList<String>
            - isPublic : boolean
            - isPublicCheck : CheckBox
            - midCheck : CheckBox
            - setTagButton : Button
            - sex : ArrayList<String>
            - sexRadioGroup : RadioGroup
            - steps : ArrayList<String>
            - tagGroup : TagGroup
            - tagList : List<String>
            - tagText : EditText
            - user : FirebaseUser
            - wBlockUuid : String
            - wishText : String
            + CreateWishBlock()
            + hideKeyboard()
            + onCreate()
            + onCreateView()
            - createWishBlock()
        }
      }
    }
  }
  

  namespace ru.omegapps.wisherapp {
    namespace fragments {
      namespace edit {
        class ru.omegapps.wisherapp.fragments.edit.EditWishBlockFragment {
            ~ mAuth : FirebaseAuth
            ~ okButton : Button
            ~ publicWishBlockRef : DatabaseReference
            ~ wishBlockRef : DatabaseReference
            ~ wishTextView : EditText
            {static} - BEGIN_STEP : String
            {static} - END_STEP : String
            {static} - ENTER_NAME_TAG : CharSequence
            {static} - FILTERS : String
            {static} - MID_STEP : String
            {static} - PUBLIC : String
            {static} - PUBLIC_WB_KEY : String
            {static} - TAGS : String
            {static} - WB_KEY : String
            {static} - WB_UUID : String
            {static} - WISH_TEXT : String
            {static} - WISH_TEXT_KEY : String
            - addNameTagButton : Button
            - beginCheck : CheckBox
            - endCheck : CheckBox
            - filters : ArrayList<String>
            - isPublic : boolean
            - isPublicCheck : CheckBox
            - midCheck : CheckBox
            - setTagButton : Button
            - sex : ArrayList<String>
            - sexRadioGroup : RadioGroup
            - steps : ArrayList<String>
            - tagGroup : TagGroup
            - tagList : List<String>
            - tagText : EditText
            - user : FirebaseUser
            - wBlockUuid : String
            - wishText : String
            + EditWishBlockFragment()
            + hideKeyboard()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
            - updateWishBlock()
        }
      }
    }
  }
  

  namespace ru.omegapps.wisherapp {
    namespace fragments {
      namespace edit {
        class ru.omegapps.wisherapp.fragments.edit.EditWishFragment {
            ~ mAuth : FirebaseAuth
            ~ okButton : Button
            ~ wishRef : DatabaseReference
            ~ wishTextView : EditText
            ~ wishTitleView : EditText
            {static} - TEXT : String
            {static} - TITLE : String
            {static} - UUID : String
            {static} - WISH_KEY : String
            {static} - WISH_TEXT_KEY : String
            {static} - WISH_TITLE_KEY : String
            - text : String
            - title : String
            - user : FirebaseUser
            - uuid : String
            + EditWishFragment()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
        }
      }
    }
  }
  

  ru.omegapps.wisherapp.fragments.edit.CreateWishBlock -up-|> androidx.fragment.app.Fragment
  ru.omegapps.wisherapp.fragments.edit.EditWishBlockFragment -up-|> androidx.fragment.app.Fragment
  ru.omegapps.wisherapp.fragments.edit.EditWishFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
